--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.2.10
 buttercms-python==1.2
 certifi==2020.6.20
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.1.1
+gunicorn==20.0.4
 idna==2.10
 pkg-resources==0.0.0
 python-dotenv==0.14.0
@@ -11,3 +13,4 @@ requests==2.24.0
 sentry-sdk==0.17.4
 sqlparse==0.3.1
 urllib3==1.25.10
+whitenoise==5.2.0
